--- a/.github/workflows/build_and_upload_artifact.yml
+++ b/.github/workflows/build_and_upload_artifact.yml
@@ -47,7 +47,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: package/docker/Dockerfile
           push: true
-          tags: bahmniindiadistro/abha-verification:${{env.ARTIFACT_VERSION}},bahmniindiadistro/abha-verification:latest
+          tags: iplit/abha-verification:${{env.ARTIFACT_VERSION}},iplit/abha-verification:latest
       - name: Helm - Update Version and Image Tag
         run: |
           yq --inplace '.image.tag = "${{ env.ARTIFACT_VERSION }}"' $HELM_CHART_PATH/values.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Helm - Checkout Charts Repository
         uses: actions/checkout@v2
         with:
-          repository: Bahmniindiadistro/helm-charts
+          repository: IPLit/helm-charts
           ref: gh-pages
           path: helm-charts
           persist-credentials: false
@@ -71,7 +71,7 @@ jobs:
 
       - name: Helm - reIndex
         working-directory: helm-charts/
-        run: helm repo index --merge index.yaml --url https://bahmniindiadistro.github.io/helm-charts/  .
+        run: helm repo index --merge index.yaml --url https://iplit.github.io/helm-charts/  .
 
       - name: Helm - Publish Chart
         working-directory: helm-charts/
@@ -80,4 +80,4 @@ jobs:
           git config user.email ${{ secrets.BAHMNI_EMAIL}}
           git add .
           git commit -m "Release of abha-verification-${{ env.ARTIFACT_VERSION }}"
-          git push 'https://${{ secrets.BAHMNI_USERNAME}}:${{ secrets.BAHMNI_PAT}}@github.com/bahmniindiadistro/helm-charts.git' gh-pages
+          git push 'https://${{ secrets.BAHMNI_USERNAME}}:${{ secrets.BAHMNI_PAT}}@github.com/iplit/helm-charts.git' gh-pages
