--- a/package/helm/values.yaml
+++ b/package/helm/values.yaml
@@ -10,7 +10,7 @@ metadata:
     environment: dev
 
 image:
-  repository: bahmniindiadistro
+  repository: infoiplitin
   name: abha-verification
   tag: latest
 
