Update build_and_upload_artifact.yml to IPLit

--- a/.github/workflows/build_and_upload_artifact.yml
+++ b/.github/workflows/build_and_upload_artifact.yml
@@ -47,7 +47,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: package/docker/Dockerfile
           push: true
-          tags: iplit/abha-verification:${{env.ARTIFACT_VERSION}},iplit/abha-verification:latest
+          tags: infoiplitin/abha-verification:${{env.ARTIFACT_VERSION}},iplit/abha-verification:latest
       - name: Helm - Update Version and Image Tag
         run: |
           yq --inplace '.image.tag = "${{ env.ARTIFACT_VERSION }}"' $HELM_CHART_PATH/values.yaml
